--- a/estilos/style.css
+++ b/estilos/style.css
@@ -54,10 +54,10 @@ main {
 }
 
 #form {
+  width: 80%;
   margin-top: 30px;
   display: block;
   text-align: justify;
-  padding: px;
   position: absolute;
   top: 50%;
   left: 50%;
